@@ -1,5 +1,5 @@
-#	$NetBSD: gcc-version.mk,v 1.2 2014/10/20 08:37:30 skrll Exp $
+#	$NetBSD: gcc-version.mk,v 1.3 2015/01/15 08:42:14 skrll Exp $
 
 # common location for tools and native build
 
-NETBSD_GCC_VERSION=nb1 20141012
+NETBSD_GCC_VERSION=nb2 20150115
